test/functions/bradc/resolution/arrayVsFn.good
arrayVsFn.chpl:1: error: 'A' has multiple definitions, redefined at:
  arrayVsFn.chpl:3
